--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,5 +1,5 @@
-<h2>New Authors</h2>
-<form action="/authors" method="POST">
+<h2>New Author</h2>
+<form action="/authors" method="POST" enctype="multipart/form-data">
     <%-  include('_form_fields')%>
     <a href="/authors">Cancel</a>
     <button type="submit">Create</button>
